# MusicPlayHandle

./: .clang-format  .gitignore  ARCHITECTURE_IMPROVEMENTS.md  CMakeLists.txt  MainWindowController_Copy.cpp  README.md  addSongDialog.ui  copy_ffmpeg_dlls.bat  createtagdialog.ui  icon.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  manageTagDialog.ui  musicPlayHandle.pro  playInterface.ui  settingsdialog.ui  test_addsong_dialog.cpp  test_audio_engine_switch.cpp  test_compile_fix.cpp  version.h  架构改进实现总结.md
.cache/clangd/index/: AddSongDialog.h.969D1D34C8E82DFD.idx  AddSongDialogController.h.95FB58542C2B1C3B.idx  CreateTagDialog.h.A88F7F7450B9D7E1.idx  MainWindowController.h.1F9C34F8568B4FB0.idx  ManageTagDialog.h.D14A950FB9251DA9.idx  ManageTagDialogController.h.4A8B50BA5A96FEE3.idx  PlayInterface.h.6EEBB4FBFAEB598A.idx  PlayInterfaceController.h.4DE4C91DC0828576.idx  SettingsDialog.h.92BE671E5E0F50B0.idx  appconfig.h.9A09206DFA38190F.idx  applicationmanager.h.0580EA2C74446A82.idx  audioengine.h.E1E0CC6747454E3C.idx  audiotypes.h.0FDC0D22B93BE24B.idx  audioworkerthread.h.224A7DB78771D605.idx  basedao.h.1778ECF85BAF8694.idx  componentintegration.h.1A99A4638CF8664A.idx  constants.h.415DFE897DD3EE6A.idx  databasemanager.h.F1C97A383A973774.idx  errorlog.h.CE4CFC2813F165A4.idx  lazyloader.h.DEF72197E656B016.idx  logdao.h.E5B2B76FF5724F66.idx  logger.h.094D3E831F328C18.idx  mainthreadmanager.h.1ED1D7F4A0CF9FCD.idx  mainwindow.h.A0EA66D721E6B2CB.idx  objectpool.h.5F4D4ABB8A7B0E6A.idx  playlist.h.0D048C2FCA42CE4B.idx  playlistdao.h.CA04B3BB8044DCA2.idx  playlistmanager.h.AE38ADCD15F04AB2.idx  servicecontainer.h.BDCE092ED3D30EA9.idx  song.h.266223E467FF4F3B.idx  songdao.h.7807F6A729314ECB.idx  structuredlogger.h.D8761F5E0F7A76C2.idx  systemlog.h.4C363EB9597BE999.idx  tag.h.FFCA0E705266AA61.idx  tagconfiguration.h.382AB8B47DD9C5B9.idx  tagdao.h.5153A07764B75F1D.idx  taglistitem.h.FFAEF07DDABBB6E5.idx  tagmanager.h.5E5C2106C4DC6CBF.idx  tagstrings.h.7C995324F30098B8.idx
.vercel/: project.json
docs/: ADD_SONG_TAG_ASSOCIATION_FIX.md  AUDIO_ENGINE_SWITCH_FEATURE.md  CMakeLists.txt  CMakeLists_test.txt  FFmpeg平衡控制-VU表不显示问题.md  FFmpeg模式UI阻塞问题修复.md  FFmpeg模式崩溃问题修复总结.md  FFmpeg模式界面卡顿问题修复总结.md  FFmpeg进度条修复总结.md  FINAL_TAG_FIX_SUMMARY.md  GITHUB_UPLOAD_GUIDE.md  MAIN_WINDOW_TAG_CREATE_FIX.md  MainWindowController_Copy.cpp  OPTIMIZATION_GUIDE.md  PLAY_BUTTON_FIX.md  PLAY_PAUSE_FIX.md  PRECISE_SLIDER_FIX_GUIDE.md  PROGRESS_BAR_DRAG_FIX.md  PROGRESS_BAR_FIX_SUMMARY.md  PROGRESS_BAR_MIXED_SOLUTION.md  PROJECT_OPTIMIZATION_SUMMARY.md  README_AudioEngine.md  REFACTORING_GUIDE.md  TAG_FIX_SUMMARY.md  build_test.bat  ffmpeg打开或关闭导致死锁问题.md  删除功能增强与问题修复总结.md  功能优化实现总结.md  多界面音频同步问题修复总结.md  多界面音频同步问题深度修复总结.md  平衡控制修复第二步总结.md  拖拽与点击进度条-最终解决及优化方案.md  拖拽音乐进度条失效问题.md  播放与暂停不可控问题.md  播放列表为空时按钮行为修复.md  旧的README文件.md  最近播放功能实现总结.md  最近播放功能问题修复总结.md  最近播放排序问题修复总结.md  最近播放排序问题最终修复.md  (+13 more)
examples/: improved_architecture_demo.cpp  optimization_usage_example.cpp
src/: CMakeLists.txt
src/audio/: audioengine.cpp  audioengine.h  audiotypes.h  ffmpegdecoder.cpp  ffmpegdecoder.h  improvedaudioengine.cpp  improvedaudioengine.h
src/core/: appconfig.cpp  appconfig.h  applicationmanager.cpp  applicationmanager.h  audiotypes.h  cache.h  componentintegration.cpp  componentintegration.h  constants.h  lazyloader.cpp  lazyloader.h  logger.cpp  logger.h  objectpool.cpp  objectpool.h  observer.h  performancemanager.cpp  performancemanager.h  resourcemanager.cpp  resourcemanager.h  result.h  servicecontainer.cpp  servicecontainer.h  structuredlogger.cpp  structuredlogger.h  tagconfiguration.cpp  tagconfiguration.h  tagstrings.cpp  tagstrings.h
src/database/: basedao.cpp  basedao.h  databasemanager.cpp  databasemanager.h  databasetransaction.h  logdao.cpp  logdao.h  playhistorydao.cpp  playhistorydao.h  playlistdao.cpp  playlistdao.h  songdao.cpp  songdao.h  tagdao.cpp  tagdao.h
src/interfaces/: idatabasemanager.h  itagmanager.h
src/managers/: playlistmanager.cpp  playlistmanager.h  tagmanager.cpp  tagmanager.h
src/models/: errorlog.cpp  errorlog.h  playhistory.cpp  playhistory.h  playlist.cpp  playlist.h  song.cpp  song.h  systemlog.cpp  systemlog.h  tag.cpp  tag.h
src/threading/: audioworkerthread.cpp  audioworkerthread.h  mainthreadmanager.cpp  mainthreadmanager.h  threadpoolmanager.cpp  threadpoolmanager.h
src/ui/controllers/: AddSongDialogController.cpp  AddSongDialogController.h  MainWindowController.cpp  MainWindowController.h  ManageTagDialogController.cpp  ManageTagDialogController.h  PlayInterfaceController.cpp  PlayInterfaceController.h
src/ui/dialogs/: AddSongDialog.cpp  AddSongDialog.h  CreateTagDialog.cpp  CreateTagDialog.h  ManageTagDialog.cpp  ManageTagDialog.h  PlayInterface.cpp  PlayInterface.h  SettingsDialog.cpp  SettingsDialog.h  improvedplayinterface.cpp  improvedplayinterface.h
src/ui/widgets/: PlaybackControlWidget.cpp  PlaybackControlWidget.h  musicprogressbar.cpp  musicprogressbar.h  recentplaylistitem.cpp  recentplaylistitem.h  taglistitem.cpp  taglistitem.h  taglistitemfactory.h
tests/: debug_test.cpp  test_audio_engine_switch.cpp  test_audio_fixes.cpp  test_database_sorting.cpp  test_delete_functions.cpp  test_function_optimizations.cpp  test_manage_tag_dialog.cpp  test_metadata_display.cpp  test_play_pause.cpp  test_playlist_empty_buttons.cpp  test_progress_bar_fix.cpp  test_recent_play_optimization.cpp  test_sorting_fix.cpp  test_tag_fix.cpp  test_tagmanager.cpp  test_tagmanager.h
translations/: en_US.ts
笔记/功能实现流程/: 主界面与播放界面(QMediaPlayerFFmpeg)改进方案0.1V.md  主界面与播放界面(QMediaPlayerFFmpeg)改进方案0.2V.md  播放界面平衡控制功能实现流程.md
笔记/智能体角色/: Qt 6 MusicPlayHandle 开发助手.md  Qt 6 开发专家.md  Qt 6 报错解决专家.md
设计文档/功能设计/: 功能设计0.1.md  功能设计0.2.md
设计文档/多线程设计/: 多线程设计0.1.md  多线程设计0.2.md
设计文档/数据库设计/: 数据库设计0.1.md  数据库设计0.2.md
设计文档/设计模式选择/: 设计模式0.1.md  设计模式0.2.md
